@@ -9,6 +9,7 @@ import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -24,6 +25,6 @@ public class SearchPairRequestService {
                         .toStudierId(pairRequest.getToStudierId())
                         .createdAt(pairRequest.getCreatedAt())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 }
